invalid_no_arg_keywords_test/invalid_no_arg_keywords_test_2.src
.IPPcode24
PUSHFRAME GF@b